# autoCLI_config

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests_with_conda.sh  setup.py
.github/workflows/: README.md  publish-to-pypi.yml  test.yml
autoCLI_config/: __init__.py  config_param.py  decorators.py  parser.py  utils.py
examples/: basic_example.py
tests/: test_config_param_and_decorators.py  test_config_system.py  test_strict_ambiguity_subprocess.py
